Use CMake FindLAPACK and FindBLAS Modules.
This should make things more robust going forward.

Also in the process SEARCH_HEADERS and SEARCH_LIBS
were changed to CERES_SEARCH_HEADERS and CERES_SEARCH_LIBS
as FindLAPACK and FindBLAS overwrite SEARCH_LIBS.

Change-Id: I8a97156d3d7cf645fbbfe8e571761bc16c89f43f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,67 +99,59 @@ OPTION(BUILD_SHARED
 # SET(CMAKE_FIND_LIBRARY_SUFFIXES .a ${CMAKE_FIND_LIBRARY_SUFFIXES})
 
 # Default locations to search for on various platforms.
-LIST(APPEND SEARCH_LIBS /usr/lib)
-LIST(APPEND SEARCH_LIBS /usr/local/lib)
-LIST(APPEND SEARCH_LIBS /usr/local/homebrew/lib) # Mac OS X
-LIST(APPEND SEARCH_LIBS /opt/local/lib)
+LIST(APPEND CERES_SEARCH_LIBS /usr/lib)
+LIST(APPEND CERES_SEARCH_LIBS /usr/local/lib)
+LIST(APPEND CERES_SEARCH_LIBS /usr/local/homebrew/lib) # Mac OS X
+LIST(APPEND CERES_SEARCH_LIBS /opt/local/lib)
 
-LIST(APPEND SEARCH_HEADERS /usr/include)
-LIST(APPEND SEARCH_HEADERS /usr/local/include)
-LIST(APPEND SEARCH_HEADERS /usr/local/homebrew/include) # Mac OS X
-LIST(APPEND SEARCH_HEADERS /opt/local/include)
+LIST(APPEND CERES_SEARCH_HEADERS /usr/include)
+LIST(APPEND CERES_SEARCH_HEADERS /usr/local/include)
+LIST(APPEND CERES_SEARCH_HEADERS /usr/local/homebrew/include) # Mac OS X
+LIST(APPEND CERES_SEARCH_HEADERS /opt/local/include)
 
 # Locations to search for Eigen
-SET(EIGEN_SEARCH_HEADERS ${SEARCH_HEADERS})
+SET(EIGEN_SEARCH_HEADERS ${CERES_SEARCH_HEADERS})
 LIST(APPEND EIGEN_SEARCH_HEADERS /usr/include/eigen3) # Ubuntu 10.04's default location.
 LIST(APPEND EIGEN_SEARCH_HEADERS /usr/local/include/eigen3)
 LIST(APPEND EIGEN_SEARCH_HEADERS /usr/local/homebrew/include/eigen3)  # Mac OS X
 LIST(APPEND EIGEN_SEARCH_HEADERS /opt/local/var/macports/software/eigen3/opt/local/include/eigen3) # Mac OS X
 
 # Locations to search for SuiteSparse
-SET(SUITESPARSE_SEARCH_LIBS ${SEARCH_LIBS})
+SET(SUITESPARSE_SEARCH_LIBS ${CERES_SEARCH_LIBS})
 LIST(APPEND SUITESPARSE_SEARCH_LIBS /usr/lib/suitesparse) # Ubuntu
 LIST(APPEND SUITESPARSE_SEARCH_LIBS /usr/local/lib/suitesparse)
 LIST(APPEND SUITESPARSE_SEARCH_LIBS /opt/local/lib/ufsparse) # Mac OS X
 
-SET(SUITESPARSE_SEARCH_HEADERS ${SEARCH_HEADERS})
+SET(SUITESPARSE_SEARCH_HEADERS ${CERES_SEARCH_HEADERS})
 LIST(APPEND SUITESPARSE_SEARCH_HEADERS /usr/include/suitesparse) # Ubuntu
 LIST(APPEND SUITESPARSE_SEARCH_HEADERS /usr/local/include/suitesparse)
 LIST(APPEND SUITESPARSE_SEARCH_HEADERS /opt/local/include/ufsparse) # Mac OS X
 
-SET(CXSPARSE_SEARCH_LIBS ${SEARCH_LIBS})
-SET(CXSPARSE_SEARCH_HEADERS ${SEARCH_HEADERS})
+SET(CXSPARSE_SEARCH_LIBS ${CERES_SEARCH_LIBS})
+SET(CXSPARSE_SEARCH_HEADERS ${CERES_SEARCH_HEADERS})
 LIST(APPEND CXSPARSE_SEARCH_HEADERS /usr/include/suitesparse) # Ubuntu
 
 SET(BLAS_AND_LAPACK_FOUND TRUE)
 IF ((NOT DEFINED LAPACK) OR (DEFINED LAPACK AND LAPACK))
-  MESSAGE("${LAPACK}")
+  FIND_PACKAGE(LAPACK)
+  IF (LAPACK_FOUND)
+    MESSAGE("-- Found LAPACK library: ${LAPACK_LIBRARIES}")
+  ELSE (LAPACK_FOUND)
+    MESSAGE("-- Did not find LAPACK library")
+    SET(BLAS_AND_LAPACK_FOUND FALSE)
+  ENDIF (LAPACK_FOUND)
 
-  IF (APPLE)
-    # Mac OS X has LAPACK/BLAS bundled in a framework called
-    # "vecLib". Search for that instead of for the normal "lapack"
-    # library.
-    FIND_LIBRARY(LAPACK_LIB NAMES vecLib)
-  ELSE (APPLE)
-    FIND_LIBRARY(BLAS_LIB NAMES blas)
-    IF (EXISTS ${BLAS_LIB})
-      MESSAGE("-- Found BLAS library: ${BLAS_LIB}")
-    ELSE (EXISTS ${BLAS_LIB})
-      MESSAGE("-- Did not find BLAS library")
-      SET(BLAS_AND_LAPACK_FOUND FALSE)
-    ENDIF (EXISTS ${BLAS_LIB})
-    FIND_LIBRARY(LAPACK_LIB NAMES lapack)
-  ENDIF (APPLE)
+  FIND_PACKAGE(BLAS)
+  IF (BLAS_FOUND)
+    MESSAGE("-- Found BLAS library: ${BLAS_LIBRARIES}")
+  ELSE (BLAS_FOUND)
+    MESSAGE("-- Did not find BLAS library")
+    SET(BLAS_AND_BLAS_FOUND FALSE)
+  ENDIF (BLAS_FOUND)
+
 ELSE ((NOT DEFINED LAPACK) OR (DEFINED LAPACK AND LAPACK))
   SET(BLAS_AND_LAPACK_FOUND FALSE)
 ENDIF ((NOT DEFINED LAPACK) OR (DEFINED LAPACK AND LAPACK))
-
-IF (EXISTS ${LAPACK_LIB})
-  MESSAGE("-- Found LAPACK library: ${LAPACK_LIB}")
-ELSE (EXISTS ${LAPACK_LIB})
-  SET(BLAS_AND_LAPACK_FOUND FALSE)
-  MESSAGE("-- Did not find LAPACK library")
-ENDIF (EXISTS ${LAPACK_LIB})
 
 IF (NOT BLAS_AND_LAPACK_FOUND)
   ADD_DEFINITIONS(-DCERES_NO_LAPACK)
@@ -316,7 +308,7 @@ ENDIF (EXISTS ${METIS_LIB})
 
 # SuiteSparseQR may be compiled with Intel Threading Building Blocks.
 SET(TBB_FOUND TRUE)
-FIND_LIBRARY(TBB_LIB NAMES tbb PATHS ${SEARCH_LIBS})
+FIND_LIBRARY(TBB_LIB NAMES tbb PATHS ${CERES_SEARCH_LIBS})
 IF (EXISTS ${TBB_LIB})
   MESSAGE("-- Found TBB library: ${TBB_LIB}")
 ELSE (EXISTS ${TBB_LIB})
@@ -324,7 +316,7 @@ ELSE (EXISTS ${TBB_LIB})
   SET(TBB_FOUND FALSE)
 ENDIF (EXISTS ${TBB_LIB})
 
-FIND_LIBRARY(TBB_MALLOC_LIB NAMES tbbmalloc PATHS ${SEARCH_LIBS})
+FIND_LIBRARY(TBB_MALLOC_LIB NAMES tbbmalloc PATHS ${CERES_SEARCH_LIBS})
 IF (EXISTS ${TBB_MALLOC_LIB})
   MESSAGE("-- Found TBB Malloc library: ${TBB_MALLOC_LIB}")
 ELSE (EXISTS ${TBB_MALLOC_LIB})
@@ -425,14 +417,14 @@ OPTION(GFLAGS
        ON)
 
 IF (GFLAGS)
-  FIND_LIBRARY(GFLAGS_LIB NAMES gflags PATHS ${SEARCH_LIBS})
+  FIND_LIBRARY(GFLAGS_LIB NAMES gflags PATHS ${CERES_SEARCH_LIBS})
   IF (NOT EXISTS ${GFLAGS_LIB})
     MESSAGE(FATAL_ERROR
             "Can't find Google Flags. Please specify: "
             "-DGFLAGS_LIB=...")
   ENDIF (NOT EXISTS ${GFLAGS_LIB})
   MESSAGE("-- Found Google Flags library: ${GFLAGS_LIB}")
-  FIND_PATH(GFLAGS_INCLUDE NAMES gflags/gflags.h PATHS ${SEARCH_HEADERS})
+  FIND_PATH(GFLAGS_INCLUDE NAMES gflags/gflags.h PATHS ${CERES_SEARCH_HEADERS})
   IF (NOT EXISTS ${GFLAGS_INCLUDE})
     MESSAGE(FATAL_ERROR
             "Can't find Google Flags. Please specify: "
@@ -446,7 +438,7 @@ ENDIF (GFLAGS)
 
 # Google Logging
 IF (NOT BUILD_ANDROID)
-  FIND_LIBRARY(GLOG_LIB NAMES glog PATHS ${SEARCH_LIBS})
+  FIND_LIBRARY(GLOG_LIB NAMES glog PATHS ${CERES_SEARCH_LIBS})
   IF (NOT EXISTS ${GLOG_LIB})
     MESSAGE(FATAL_ERROR
             "Can't find Google Log. Please specify: "
@@ -454,7 +446,7 @@ IF (NOT BUILD_ANDROID)
   ENDIF (NOT EXISTS ${GLOG_LIB})
   MESSAGE("-- Found Google Log library: ${GLOG_LIB}")
 
-  FIND_PATH(GLOG_INCLUDE NAMES glog/logging.h PATHS ${SEARCH_HEADERS})
+  FIND_PATH(GLOG_INCLUDE NAMES glog/logging.h PATHS ${CERES_SEARCH_HEADERS})
   IF (NOT EXISTS ${GLOG_INCLUDE})
     MESSAGE(FATAL_ERROR
             "Can't find Google Log. Please specify: "
