Incorporate RHEL build fixes from Brian Pitts
CMake build fixed so that versioned shared libraries are installed
(along with .so symlinks)

Change-Id: Ibbaea9d37d17754cb8c3cd36fc17d015ca7d2a57

--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -193,6 +193,10 @@ SET(CERES_LIBRARY_SOURCE
     ${CERES_INTERNAL_SCHUR_FILES})
 
 ADD_LIBRARY(ceres ${CERES_LIBRARY_SOURCE})
+SET_TARGET_PROPERTIES(ceres PROPERTIES
+  VERSION ${CERES_VERSION} 
+  SOVERSION ${CERES_VERSION_MAJOR}
+) 
 TARGET_LINK_LIBRARIES(ceres ${CERES_LIBRARY_DEPENDENCIES})
 
 INSTALL(TARGETS ceres
