Fix two build errors.
1. Not set -march=native -mtune=native for GCC versions less than 4.2
2. Explicit cast in lapack.cc

Thanks to Dustin Lang for reporting this.

Change-Id: I71fbefa5f7db0188516f9f1dc044d7d5f374e2cd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -600,7 +600,9 @@ IF (CMAKE_BUILD_TYPE STREQUAL "Release")
   IF (CMAKE_COMPILER_IS_GNUCXX)
     # Linux
     IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
-      SET (CERES_CXX_FLAGS "${CERES_CXX_FLAGS} -march=native -mtune=native")
+      IF (GCC_VERSION NOT VERSION_LESS 4.2)
+	SET (CERES_CXX_FLAGS "${CERES_CXX_FLAGS} -march=native -mtune=native")
+      ENDIF (GCC_VERSION NOT VERSION_LESS 4.2)
     ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
     # Mac OS X
     IF (CMAKE_SYSTEM_NAME MATCHES "Darwin")
