--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -154,9 +154,9 @@ IF (SUITESPARSE_FOUND)
   LIST(APPEND CERES_LIBRARY_DEPENDENCIES ${CAMD_LIB})
   LIST(APPEND CERES_LIBRARY_DEPENDENCIES ${COLAMD_LIB})
   LIST(APPEND CERES_LIBRARY_DEPENDENCIES ${AMD_LIB})
-  IF (EXISTS ${SUITESPARSE_CONFIG_LIB})
+  IF (SUITESPARSE_CONFIG_FOUND)
     LIST(APPEND CERES_LIBRARY_DEPENDENCIES ${SUITESPARSE_CONFIG_LIB})
-  ENDIF (EXISTS ${SUITESPARSE_CONFIG_LIB})
+  ENDIF (SUITESPARSE_CONFIG_FOUND)
 
   IF (EXISTS ${METIS_LIB})
     LIST(APPEND CERES_LIBRARY_DEPENDENCIES ${METIS_LIB})
